[gd_scene load_steps=5 format=3 uid="uid://nk2tdbkd4ujv"]

[ext_resource type="Script" path="res://reward_menu.gd" id="1_qh81p"]
[ext_resource type="PackedScene" uid="uid://fj76k2ap1q30" path="res://weapon_display.tscn" id="2_fqt28"]
[ext_resource type="Texture2D" uid="uid://ofia8qh3aia6" path="res://assets/mod_reward_icon.png" id="2_w88qu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8n0tx"]
bg_color = Color(0.0235294, 0.0235294, 0.137255, 1)

[node name="reward_menu" type="Control" groups=["reward_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qh81p")

[node name="center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="PanelContainer" parent="center"]
layout_mode = 2
offset_left = 151.0
offset_top = 74.0
offset_right = 1768.0
offset_bottom = 1006.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8n0tx")

[node name="vsplit" type="VSplitContainer" parent="center/panel"]
layout_mode = 2
offset_right = 1617.0
offset_bottom = 932.0
dragger_visibility = 2

[node name="margin" type="MarginContainer" parent="center/panel/vsplit"]
layout_mode = 2
offset_right = 1617.0
offset_bottom = 501.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100

[node name="vbox" type="VBoxContainer" parent="center/panel/vsplit/margin"]
layout_mode = 2
offset_left = 100.0
offset_top = 40.0
offset_right = 1517.0
offset_bottom = 501.0

[node name="header" type="Label" parent="center/panel/vsplit/margin/vbox"]
layout_mode = 2
offset_right = 1417.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 80
text = "New Wand!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="center" type="CenterContainer" parent="center/panel/vsplit/margin/vbox"]
layout_mode = 2
offset_top = 117.0
offset_right = 1417.0
offset_bottom = 413.0

[node name="margin" type="MarginContainer" parent="center/panel/vsplit/margin/vbox/center"]
layout_mode = 2
offset_left = 354.0
offset_right = 1062.0
offset_bottom = 296.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="new_weapon" parent="center/panel/vsplit/margin/vbox/center/margin" instance=ExtResource("2_fqt28")]
visible = false
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 688.0
offset_bottom = 276.0
CLICKABLE = false

[node name="hsplit" type="HSplitContainer" parent="center/panel/vsplit/margin/vbox/center/margin"]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 688.0
offset_bottom = 276.0
dragger_visibility = 1

[node name="upgrade_icon" type="TextureRect" parent="center/panel/vsplit/margin/vbox/center/margin/hsplit"]
layout_mode = 2
offset_right = 256.0
offset_bottom = 256.0
texture = ExtResource("2_w88qu")

[node name="vsplit" type="VBoxContainer" parent="center/panel/vsplit/margin/vbox/center/margin/hsplit"]
custom_minimum_size = Vector2i(400, 0)
layout_mode = 2
offset_left = 268.0
offset_right = 668.0
offset_bottom = 256.0

[node name="name" type="Label" parent="center/panel/vsplit/margin/vbox/center/margin/hsplit/vsplit"]
layout_mode = 2
offset_right = 400.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 36
text = "Upgrade Name"
horizontal_alignment = 1

[node name="VSeparator2" type="HSeparator" parent="center/panel/vsplit/margin/vbox/center/margin/hsplit/vsplit"]
layout_mode = 2
offset_top = 57.0
offset_right = 400.0
offset_bottom = 61.0

[node name="description" type="Label" parent="center/panel/vsplit/margin/vbox/center/margin/hsplit/vsplit"]
layout_mode = 2
offset_top = 123.0
offset_right = 400.0
offset_bottom = 197.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "This is a description of the upgrade"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="margin" type="MarginContainer" parent="center/panel/vsplit/margin/vbox"]
layout_mode = 2
offset_top = 417.0
offset_right = 1417.0
offset_bottom = 461.0
theme_override_constants/margin_top = 40

[node name="vsep" type="HSeparator" parent="center/panel/vsplit/margin/vbox/margin"]
layout_mode = 2
offset_top = 40.0
offset_right = 1417.0
offset_bottom = 44.0

[node name="margin2" type="MarginContainer" parent="center/panel/vsplit"]
layout_mode = 2
offset_top = 501.0
offset_right = 1617.0
offset_bottom = 932.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="vsplit" type="VSplitContainer" parent="center/panel/vsplit/margin2"]
layout_mode = 2
offset_left = 50.0
offset_top = 20.0
offset_right = 1567.0
offset_bottom = 381.0
dragger_visibility = 1

[node name="option_header" type="Label" parent="center/panel/vsplit/margin2/vsplit"]
layout_mode = 2
offset_right = 1517.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 36
text = "Pick a wand to replace:"
horizontal_alignment = 1

[node name="hbox" type="HBoxContainer" parent="center/panel/vsplit/margin2/vsplit"]
layout_mode = 2
offset_top = 65.0
offset_right = 1517.0
offset_bottom = 361.0

[node name="margin" type="MarginContainer" parent="center/panel/vsplit/margin2/vsplit/hbox"]
layout_mode = 2
offset_right = 503.0
offset_bottom = 296.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="weapon1" parent="center/panel/vsplit/margin2/vsplit/hbox/margin" instance=ExtResource("2_fqt28")]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 483.0
offset_bottom = 276.0

[node name="margin2" type="MarginContainer" parent="center/panel/vsplit/margin2/vsplit/hbox"]
layout_mode = 2
offset_left = 507.0
offset_right = 1010.0
offset_bottom = 296.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="weapon2" parent="center/panel/vsplit/margin2/vsplit/hbox/margin2" instance=ExtResource("2_fqt28")]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 483.0
offset_bottom = 276.0

[node name="margin3" type="MarginContainer" parent="center/panel/vsplit/margin2/vsplit/hbox"]
layout_mode = 2
offset_left = 1014.0
offset_right = 1517.0
offset_bottom = 296.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="trash" parent="center/panel/vsplit/margin2/vsplit/hbox/margin3" instance=ExtResource("2_fqt28")]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 483.0
offset_bottom = 276.0
IS_TRASH = true

[connection signal="clicked" from="center/panel/vsplit/margin2/vsplit/hbox/margin/weapon1" to="." method="_on_weapon_1_clicked"]
[connection signal="clicked" from="center/panel/vsplit/margin2/vsplit/hbox/margin2/weapon2" to="." method="_on_weapon_2_clicked"]
[connection signal="clicked" from="center/panel/vsplit/margin2/vsplit/hbox/margin3/trash" to="." method="_on_trash_clicked"]
